cmake_minimum_required( VERSION 2.8 )

include( CheckCXXCompilerFlag )
check_cxx_compiler_flag( "-std=c++11"   COMPILER_SUPPORTS_CXX11 )
check_cxx_compiler_flag( "-std=c++0x"   COMPILER_SUPPORTS_CXX0X )
if( COMPILER_SUPPORTS_CXX11 )
    if( CMAKE_COMPILER_IS_GNUCXX )
        set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11" )
    else()
        set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
    endif()
elseif( COMPILER_SUPPORTS_CXX0X)
    set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x" )
else()
    # MSVC, On by default (if available)
endif()

option(BUILD_EXAMPLES "Build Examples" ON)
include_directories(${CMAKE_SOURCE_DIR}/include)
file(GLOB FFMPEGCPP_SRCS src/*.cpp)
add_library(ffmpegcpp SHARED ${FFMPEGCPP_SRCS})

file(GLOB EXAMPLE_SRCS examples/*.cpp)
#target_link_libraries(${ffmpegcpp} avformat avdevice avcodec swscale avutil swresample)
if ( BUILD_EXAMPLES )
    foreach(example ${EXAMPLE_SRCS}) 
        string(REPLACE "/" ";" file_components ${example})
		list(GET file_components -1 filename)    
		string(REPLACE "." ";" basename_components ${filename})
		list(GET basename_components 0 example_name)
		message(STATUS "${example_name}")
        add_executable( ${example_name} ${CMAKE_SOURCE_DIR}/examples/${example_name}.cpp )
        target_link_libraries(${example_name} ffmpegcpp
            avformat avdevice avfilter avcodec swscale avutil swresample)
    endforeach() 
endif()
